client/envoy-A.yaml
static_resources:
  listeners:
  - name: proxy_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 5001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: envoy-b
          http_filters:
          - name: envoy.filters.http.secure_proxy
            typed_config:
              "@type": type.googleapis.com/secureproxy.Config
              token: FILL_IN
              role: SENDER
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: envoy-b
    type: STRICT_DNS
    load_assignment:
      cluster_name: envoy-b
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: FILL_IN
                port_value: 8081

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
